--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,19 +2,46 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.rotai.res_art2">
 
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
     <application
+        android:name=".MyApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity
+            android:name=".chapter2.MainActivity"
+            android:configChanges="orientation|screenSize"
+            android:launchMode="standard">
+
+        </activity>
+        <activity
+            android:name=".chapter2.SecondActivity"
+            android:configChanges="screenLayout"
+            android:process=":remote" />
+        <activity
+            android:name=".chapter2.ThirdActivity"
+            android:configChanges="screenLayout"
+            android:process="com.rotai.res_art2.remote" />
+        <activity android:name=".chapter2.TestActivity" />
+
+        <service
+            android:name=".chapter2.AndroidIPC.MessengerService"
+            android:enabled="true"
+            android:exported="true"
+            android:process=":remote" />
+
+        <activity android:name=".chapter2.AndroidIPC.MessengerActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
         </activity>
     </application>
 
